# make-class-rs

./: Cargo.toml  data.ron
src/: address.rs  app.rs  global_state.rs  hotkeys.rs  inspection.rs  lib.rs  main.rs  memory.rs  project.rs  styling.rs  utils.rs  value.rs
src/address_parser/: ast.rs  lexer.rs  mod.rs  parser.rs  token.rs
src/class/: class_list.rs  mod.rs
src/field/: boolean.rs  class_instance.rs  class_pointer.rs  field_tag.rs  float.rs  hex.rs  int.rs  mod.rs  string.rs  vector.rs
src/generator/: mod.rs  rust.rs
src/ui/: class_list_panel.rs  inspector_panel.rs  mod.rs  modals.rs  toolbar_panel.rs
